[tool.poetry]
name = "update-results"
version = "0.1.0"
description = ""
authors = ["Pete Brown <15838790+petebrown@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "update_results"}]

[tool.poetry.dependencies]
python = "^3.11"
undetected-chromedriver = "^3.2.1"
beautifulsoup4 = "^4.11.2"
pandas = "^1.5.3"
webdriver-manager = "^3.8.5"
selenium = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
